--- a/index.html
+++ b/index.html
@@ -147,19 +147,21 @@
 						<h2>Aranylemez</h2>
 						<p>
 					A szondák rakterében az emberiséget és kozmikus környezetét bemutató szemléltető eszközöket
-					 helyeztek el. Egy kb. 30 cm-es, arannyal futtatott réz hanglemezen a Föld 35-féle természetes 
+					helyeztek el. Egy kb. 30 cm-es, arannyal futtatott réz hanglemezen a Föld 35-féle természetes 
 					 és az ember által keltett mesterséges hangjait helyezték el:
 				</p>
 				<ul>
-					<li> gyermeksírás,</li>
-					<li> kutyaugatás</li>
-					<li> nevetés,</li>
-					<li>üdvözlet 55 nyelven (magyarul is),</li>
-					<li>Mozart Varázsfuvolájától a zairei pigmeusok és az ausztráliai bennszülöttek énekén át
-					 Chuck Berry Johnny B. Goode-jáig 27 zeneműből szerepel részlet.
+					<li class="my-2"> gyermeksírás,</li>
+					<li class="my-2"> kutyaugatás</li>
+					<li class="my-2"> nevetés,</li>
+					<li class="my-2">üdvözlet 55 nyelven (magyarul is),</li>
+					<li class="my-2">
+						Mozart Varázsfuvolájától a zairei pigmeusok és az ausztráliai bennszülöttek énekén át
+					 	Chuck Berry Johnny B. Goode-jáig 27 zeneműből szerepel részlet.
 					</li>
-</ul>
-A lemezen a hanganyag mellett 115 analóg kódolású fénykép is található.
+				</ul>
+				<img class="my-3 w-100" src="aranylemez.jpg" title="Golden Record">
+				<p> lemezen a hanganyag mellett 115 analóg kódolású fénykép is található.</p>
 					</section>
 				</div>
 				
@@ -169,7 +171,7 @@ A lemezen a hanganyag mellett 115 analóg kódolású fénykép is található.
 	
 	<!-- Lábléc -->	
 	<div class="lablec text-center p-2 mt-1 bg-warning">
-			
+			<a href="https://voyager.jpl.nasa.gov" targer="_blank">Voyager küldetés</a>
 	</div>
 </body>
 
